feat(crashtracking): Report registry to memory mapping